My Card with one card

--- a/heartsla.css
+++ b/heartsla.css
@@ -47,24 +47,13 @@
 /********* You can start writing your CSS below this line: **********/
 
 
-/*
-    Example of CSS sprites (a black token and a white token, 20x20px each, embedded in the same "tokens.png" 40x20px image):
+/*** cards on table ***/
 
-    .white_token {
-        background-image: url('img/tokens.png');
-        background-position: 0px 0px;
-    }
-    .black_token {
-        background-image: url('img/tokens.png');
-        background-position: -20px 0px;
-    }
-    .token {
-        width: 20px;
-        height: 20px;
-        background-repeat: none;
-    }
-*/
-
+.cardontable {
+    width: 72px;
+    height: 96px;
+    background-image: url('img/cards.jpg'); 
+}
 
 
 
