--- a/heartsla.css
+++ b/heartsla.css
@@ -91,8 +91,14 @@
     margin-top: 5px;
     width: 72px;
     height: 96px;
-    background-image: url('img/cards.jpg'); 
 }
 
+/*** cards on table ***/
 
+.cardontable {
+    position: absolute;
+    width: 72px;
+    height: 96px;
+    background-image: url('img/cards.jpg'); 
+}
 
