css fix in first section

--- a/heartslav.css
+++ b/heartslav.css
@@ -57,3 +57,42 @@
     background-image: url('img/cards.jpg'); /* temp hack to see it */
 }
 
+/** Table layout **/
+
+#player-tables {
+    position: relative;
+    width: 710px;
+    height: 340px;
+}
+
+.playertablename {
+    font-weight: bold;
+}
+
+.playertable {
+    position: absolute;
+    text-align: center;
+    width: 180px;
+    height: 130px;
+}
+
+.playertable_N {
+    left: 50%;
+    top: 0px;
+    margin-left: -90px; /* half of 180 */
+}
+.playertable_S {
+    left: 50%;
+    bottom: 0px;
+    margin-left: -90px; /* half of 180 */
+}
+.playertable_W {
+    left: 0px;
+    top: 50%;
+    margin-top: -55px; /* half of 130 */
+}
+.playertable_E {
+    right: 0px;
+    top: 50%;
+    margin-top: -55px; /* half of 130 */
+}
