Full game model synchronisation: part I

--- a/heartslav.css
+++ b/heartslav.css
@@ -54,6 +54,16 @@
     margin-top: 5px;
     width: 72px;
     height: 96px;
+    /* we remove background-image here */
+}
+
+/*** cards on table ***/
+
+.cardontable {
+    position: absolute;
+    width: 72px;
+    height: 96px;
+    background-image: url('img/cards.jpg'); 
 }
 
 /** Table layout **/
