end of basic tutorial

--- a/heartslav.css
+++ b/heartslav.css
@@ -51,7 +51,7 @@
 :root {
   --h-card-width: 100px;
   --h-card-height: 135px;
-  --h-tableau-width: 180px;
+  --h-tableau-width: 220px;
   --h-tableau-height: 180px;
 }
 
@@ -97,4 +97,15 @@
 .ha-card-front {
   background-size: 1500% auto;
   background-image: url("img/cards.jpg");
+}
+
+
+.playertable .ha-card ~ .ha-card {
+    margin-left: calc(var(--h-card-width) * -0.8);
+}
+
+
+.cardswon > .ha-card {
+  position: absolute;
+  top: 0 !important;
 }
